# Lidar_KITTI

./: BEV.py  README.md  alltigether.py  main.py  pointcloud_processor.py  sam_seg.py  semantic_segmenter.py
install/: local_setup.sh  setup.sh
install/your_package/share/your_package/: package.bash  package.zsh
kitti_project_ws/: =0.17.0  =8.0.0  Dockerfile  requirements.txt
kitti_project_ws/install/: local_setup.sh  setup.sh
kitti_project_ws/log/: latest_build
kitti_project_ws/src/kitti_project/: CMakeLists.txt  package.xml  pip_requirements.txt  requirements.txt  rosdep.yml  setup.py
kitti_project_ws/src/kitti_project/kitti_project1/: bev_generator.py  pointcloud_processor.py  semantic_segmenter.py
kitti_project_ws/src/kitti_project/launch/: kitti_pipeline.launch.py
kitti_project_ws/src/kitti_project/msg/: SegmentationResult.msg
log/: latest_build  latest_list
